# rust-win32-bindgen

./: .gitignore  Cargo.toml  Project.sublime-project  README.md  build.rs  hello.rs  lib.rs
data/: README.md  winver.json
headers/: apiset.rs  basetsd.rs  bemapiset.rs  errhandlingapi.rs  fileapi.rs  guiddef.rs  heapapi.rs  ime_cmodes.rs  imm.rs  kernelspecs.rs  ktmtypes.rs  libloaderapi.rs  mcx.rs  memoryapi.rs  minwinbase.rs  minwindef.rs  namespaceapi.rs  processthreadsapi.rs  reason.rs  stralign.rs  synchapi.rs  sysinfoapi.rs  threadpoolapiset.rs  timezoneapi.rs  tvout.rs  verrsrc.rs  winapifamily.rs  winbase.rs  wincon.rs  windef.rs  winerror.rs  wingdi.rs  winnetwk.rs  winnls.rs  winnt.rs  winreg.rs  winsvc.rs  winuser.rs  wnnc.rs
libraries/: advapi32.rs  bufferoverflow.rs  ehstorguids.rs  elfapi.rs  fileextd.rs  gdi32.rs  imm32.rs  kernel32.rs  mincore.rs  mincore_downlevel.rs  mpr.rs  msimg32.rs  normaliz.rs  ntdll.rs  ntdllp.rs  opengl32.rs  other.rs  scrnsave.rs  scrnsavw.rs  synchronization.rs  user32.rs  version.rs  winspool.rs
script/: check-sym-list.py  gen-sym-list-from-stubs.sh  gen-sym-list.sh
src/: features.rs  generated.rs  lib.rs  main.rs  process.rs  util.rs
src/clang/: ll.rs  mod.rs
src/features/: archs.rs  cc.rs  mod.rs  parts.rs  scan.rs  winvers.rs
src/features/cc/: ast.rs  eval.rs  mod.rs  parse.rs
src/macros/: bitflags.rs  mod.rs
src/ppmac/: mod.rs
src/process/: features.rs  mod.rs  output.rs  renames.rs  sanity.rs  trans_decls.rs  trans_macros.rs
