[package]
name = "win32_bindgen"
version = "0.0.1"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

build = "build.rs"
links = "clang"

[dependencies]
env_logger = "0.3.1"
itertools = "0.3.20"
libc = "0.1.8"
log = "0.3.1"
num = "0.1.25"
regex = "0.1.38"

[build-dependencies]
itertools = "0.3.20"
serde = "0.4.2"
