[package]
name = "win32_bindgen"
version = "0.1.0"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

build = "build.rs"
links = "clang"

[dependencies]
itertools = "0.3.21"
lazy_static = "0.1.11"
libc = "0.1.8"
log = "0.3.1"
log4rs = "0.3.3"
num = "0.1.25"
regex = "0.1.38"
rustc-serialize = "0.3.15"

[build-dependencies]
itertools = "0.3.21"
serde = "0.4.2"
